[project]
name = "snakemake-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "snakemake>=8.0.0",
]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.uv.sources]
snakemake-tools = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "snakemake-tools",
    "spyder>=6.0.4",
]
